chore: regenerate API client SDK
