# pkg/clientapi/model_access_session_client_model.go
@@ -33,6 +33,7 @@ type AccessSessionClientModel struct {
 	Launchers            []LauncherSummaryClientModel                `json:"launchers"`
 	ConsumedBy           NullableString                              `json:"consumed_by,omitempty"`
 	CredentialsRotated   bool                                        `json:"credentials_rotated"`
+	CustomAccessDetails  NullableString                              `json:"custom_access_details,omitempty"`
 }
 
 type _AccessSessionClientModel AccessSessionClientModel
@@ -433,6 +434,49 @@ func (o *AccessSessionClientModel) SetCredentialsRotated(v bool) {
 	o.CredentialsRotated = v
 }
 
+// GetCustomAccessDetails returns the CustomAccessDetails field value if set, zero value otherwise (both if not set or set to explicit null).
+func (o *AccessSessionClientModel) GetCustomAccessDetails() string {
+	if o == nil || IsNil(o.CustomAccessDetails.Get()) {
+		var ret string
+		return ret
+	}
+	return *o.CustomAccessDetails.Get()
+}
+
+// GetCustomAccessDetailsOk returns a tuple with the CustomAccessDetails field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+func (o *AccessSessionClientModel) GetCustomAccessDetailsOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.CustomAccessDetails.Get(), o.CustomAccessDetails.IsSet()
+}
+
+// HasCustomAccessDetails returns a boolean if a field has been set.
+func (o *AccessSessionClientModel) HasCustomAccessDetails() bool {
+	if o != nil && o.CustomAccessDetails.IsSet() {
+		return true
+	}
+
+	return false
+}
+
+// SetCustomAccessDetails gets a reference to the given NullableString and assigns it to the CustomAccessDetails field.
+func (o *AccessSessionClientModel) SetCustomAccessDetails(v string) {
+	o.CustomAccessDetails.Set(&v)
+}
+
+// SetCustomAccessDetailsNil sets the value for CustomAccessDetails to be an explicit nil
+func (o *AccessSessionClientModel) SetCustomAccessDetailsNil() {
+	o.CustomAccessDetails.Set(nil)
+}
+
+// UnsetCustomAccessDetails ensures that no value is present for CustomAccessDetails, not even an explicit nil
+func (o *AccessSessionClientModel) UnsetCustomAccessDetails() {
+	o.CustomAccessDetails.Unset()
+}
+
 func (o AccessSessionClientModel) MarshalJSON() ([]byte, error) {
 	toSerialize, err := o.ToMap()
 	if err != nil {
@@ -462,6 +506,9 @@ func (o AccessSessionClientModel) ToMap() (map[string]interface{}, error) {
 		toSerialize["consumed_by"] = o.ConsumedBy.Get()
 	}
 	toSerialize["credentials_rotated"] = o.CredentialsRotated
+	if o.CustomAccessDetails.IsSet() {
+		toSerialize["custom_access_details"] = o.CustomAccessDetails.Get()
+	}
 	return toSerialize, nil
 }
 
