# pkg/clientapi/model_http_server_config_app_model.go
@@ -1,0 +1,181 @@
+/*
+Apono
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package clientapi
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+// checks if the HttpServerConfigAppModel type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &HttpServerConfigAppModel{}
+
+// HttpServerConfigAppModel struct for HttpServerConfigAppModel
+type HttpServerConfigAppModel struct {
+	Endpoint string            `json:"endpoint"`
+	Headers  map[string]string `json:"headers"`
+}
+
+type _HttpServerConfigAppModel HttpServerConfigAppModel
+
+// NewHttpServerConfigAppModel instantiates a new HttpServerConfigAppModel object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewHttpServerConfigAppModel(endpoint string, headers map[string]string) *HttpServerConfigAppModel {
+	this := HttpServerConfigAppModel{}
+	this.Endpoint = endpoint
+	this.Headers = headers
+	return &this
+}
+
+// NewHttpServerConfigAppModelWithDefaults instantiates a new HttpServerConfigAppModel object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewHttpServerConfigAppModelWithDefaults() *HttpServerConfigAppModel {
+	this := HttpServerConfigAppModel{}
+	return &this
+}
+
+// GetEndpoint returns the Endpoint field value
+func (o *HttpServerConfigAppModel) GetEndpoint() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Endpoint
+}
+
+// GetEndpointOk returns a tuple with the Endpoint field value
+// and a boolean to check if the value has been set.
+func (o *HttpServerConfigAppModel) GetEndpointOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Endpoint, true
+}
+
+// SetEndpoint sets field value
+func (o *HttpServerConfigAppModel) SetEndpoint(v string) {
+	o.Endpoint = v
+}
+
+// GetHeaders returns the Headers field value
+func (o *HttpServerConfigAppModel) GetHeaders() map[string]string {
+	if o == nil {
+		var ret map[string]string
+		return ret
+	}
+
+	return o.Headers
+}
+
+// GetHeadersOk returns a tuple with the Headers field value
+// and a boolean to check if the value has been set.
+func (o *HttpServerConfigAppModel) GetHeadersOk() (*map[string]string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Headers, true
+}
+
+// SetHeaders sets field value
+func (o *HttpServerConfigAppModel) SetHeaders(v map[string]string) {
+	o.Headers = v
+}
+
+func (o HttpServerConfigAppModel) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o HttpServerConfigAppModel) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["endpoint"] = o.Endpoint
+	toSerialize["headers"] = o.Headers
+	return toSerialize, nil
+}
+
+func (o *HttpServerConfigAppModel) UnmarshalJSON(bytes []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"endpoint",
+		"headers",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(bytes, &allProperties)
+
+	if err != nil {
+		return err
+	}
+
+	for _, requiredProperty := range requiredProperties {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varHttpServerConfigAppModel := _HttpServerConfigAppModel{}
+
+	err = json.Unmarshal(bytes, &varHttpServerConfigAppModel)
+
+	if err != nil {
+		return err
+	}
+
+	*o = HttpServerConfigAppModel(varHttpServerConfigAppModel)
+
+	return err
+}
+
+type NullableHttpServerConfigAppModel struct {
+	value *HttpServerConfigAppModel
+	isSet bool
+}
+
+func (v NullableHttpServerConfigAppModel) Get() *HttpServerConfigAppModel {
+	return v.value
+}
+
+func (v *NullableHttpServerConfigAppModel) Set(val *HttpServerConfigAppModel) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableHttpServerConfigAppModel) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableHttpServerConfigAppModel) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableHttpServerConfigAppModel(val *HttpServerConfigAppModel) *NullableHttpServerConfigAppModel {
+	return &NullableHttpServerConfigAppModel{value: val, isSet: true}
+}
+
+func (v NullableHttpServerConfigAppModel) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableHttpServerConfigAppModel) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
