# pkg/clientapi/model_mcp_server_client_model_server_config_v2.go
@@ -1,0 +1,247 @@
+/*
+Apono
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package clientapi
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+// checks if the McpServerClientModelServerConfigV2 type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &McpServerClientModelServerConfigV2{}
+
+// McpServerClientModelServerConfigV2 struct for McpServerClientModelServerConfigV2
+type McpServerClientModelServerConfigV2 struct {
+	Transport McpServerTransportAppModel             `json:"transport"`
+	Stdio     NullableMcpServerConfigAppModelV2Stdio `json:"stdio,omitempty"`
+	Http      NullableMcpServerConfigAppModelV2Http  `json:"http,omitempty"`
+}
+
+type _McpServerClientModelServerConfigV2 McpServerClientModelServerConfigV2
+
+// NewMcpServerClientModelServerConfigV2 instantiates a new McpServerClientModelServerConfigV2 object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewMcpServerClientModelServerConfigV2(transport McpServerTransportAppModel) *McpServerClientModelServerConfigV2 {
+	this := McpServerClientModelServerConfigV2{}
+	this.Transport = transport
+	return &this
+}
+
+// NewMcpServerClientModelServerConfigV2WithDefaults instantiates a new McpServerClientModelServerConfigV2 object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewMcpServerClientModelServerConfigV2WithDefaults() *McpServerClientModelServerConfigV2 {
+	this := McpServerClientModelServerConfigV2{}
+	return &this
+}
+
+// GetTransport returns the Transport field value
+func (o *McpServerClientModelServerConfigV2) GetTransport() McpServerTransportAppModel {
+	if o == nil {
+		var ret McpServerTransportAppModel
+		return ret
+	}
+
+	return o.Transport
+}
+
+// GetTransportOk returns a tuple with the Transport field value
+// and a boolean to check if the value has been set.
+func (o *McpServerClientModelServerConfigV2) GetTransportOk() (*McpServerTransportAppModel, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Transport, true
+}
+
+// SetTransport sets field value
+func (o *McpServerClientModelServerConfigV2) SetTransport(v McpServerTransportAppModel) {
+	o.Transport = v
+}
+
+// GetStdio returns the Stdio field value if set, zero value otherwise (both if not set or set to explicit null).
+func (o *McpServerClientModelServerConfigV2) GetStdio() McpServerConfigAppModelV2Stdio {
+	if o == nil || IsNil(o.Stdio.Get()) {
+		var ret McpServerConfigAppModelV2Stdio
+		return ret
+	}
+	return *o.Stdio.Get()
+}
+
+// GetStdioOk returns a tuple with the Stdio field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+func (o *McpServerClientModelServerConfigV2) GetStdioOk() (*McpServerConfigAppModelV2Stdio, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Stdio.Get(), o.Stdio.IsSet()
+}
+
+// HasStdio returns a boolean if a field has been set.
+func (o *McpServerClientModelServerConfigV2) HasStdio() bool {
+	if o != nil && o.Stdio.IsSet() {
+		return true
+	}
+
+	return false
+}
+
+// SetStdio gets a reference to the given NullableMcpServerConfigAppModelV2Stdio and assigns it to the Stdio field.
+func (o *McpServerClientModelServerConfigV2) SetStdio(v McpServerConfigAppModelV2Stdio) {
+	o.Stdio.Set(&v)
+}
+
+// SetStdioNil sets the value for Stdio to be an explicit nil
+func (o *McpServerClientModelServerConfigV2) SetStdioNil() {
+	o.Stdio.Set(nil)
+}
+
+// UnsetStdio ensures that no value is present for Stdio, not even an explicit nil
+func (o *McpServerClientModelServerConfigV2) UnsetStdio() {
+	o.Stdio.Unset()
+}
+
+// GetHttp returns the Http field value if set, zero value otherwise (both if not set or set to explicit null).
+func (o *McpServerClientModelServerConfigV2) GetHttp() McpServerConfigAppModelV2Http {
+	if o == nil || IsNil(o.Http.Get()) {
+		var ret McpServerConfigAppModelV2Http
+		return ret
+	}
+	return *o.Http.Get()
+}
+
+// GetHttpOk returns a tuple with the Http field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+func (o *McpServerClientModelServerConfigV2) GetHttpOk() (*McpServerConfigAppModelV2Http, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Http.Get(), o.Http.IsSet()
+}
+
+// HasHttp returns a boolean if a field has been set.
+func (o *McpServerClientModelServerConfigV2) HasHttp() bool {
+	if o != nil && o.Http.IsSet() {
+		return true
+	}
+
+	return false
+}
+
+// SetHttp gets a reference to the given NullableMcpServerConfigAppModelV2Http and assigns it to the Http field.
+func (o *McpServerClientModelServerConfigV2) SetHttp(v McpServerConfigAppModelV2Http) {
+	o.Http.Set(&v)
+}
+
+// SetHttpNil sets the value for Http to be an explicit nil
+func (o *McpServerClientModelServerConfigV2) SetHttpNil() {
+	o.Http.Set(nil)
+}
+
+// UnsetHttp ensures that no value is present for Http, not even an explicit nil
+func (o *McpServerClientModelServerConfigV2) UnsetHttp() {
+	o.Http.Unset()
+}
+
+func (o McpServerClientModelServerConfigV2) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o McpServerClientModelServerConfigV2) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["transport"] = o.Transport
+	if o.Stdio.IsSet() {
+		toSerialize["stdio"] = o.Stdio.Get()
+	}
+	if o.Http.IsSet() {
+		toSerialize["http"] = o.Http.Get()
+	}
+	return toSerialize, nil
+}
+
+func (o *McpServerClientModelServerConfigV2) UnmarshalJSON(bytes []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"transport",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(bytes, &allProperties)
+
+	if err != nil {
+		return err
+	}
+
+	for _, requiredProperty := range requiredProperties {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varMcpServerClientModelServerConfigV2 := _McpServerClientModelServerConfigV2{}
+
+	err = json.Unmarshal(bytes, &varMcpServerClientModelServerConfigV2)
+
+	if err != nil {
+		return err
+	}
+
+	*o = McpServerClientModelServerConfigV2(varMcpServerClientModelServerConfigV2)
+
+	return err
+}
+
+type NullableMcpServerClientModelServerConfigV2 struct {
+	value *McpServerClientModelServerConfigV2
+	isSet bool
+}
+
+func (v NullableMcpServerClientModelServerConfigV2) Get() *McpServerClientModelServerConfigV2 {
+	return v.value
+}
+
+func (v *NullableMcpServerClientModelServerConfigV2) Set(val *McpServerClientModelServerConfigV2) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableMcpServerClientModelServerConfigV2) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableMcpServerClientModelServerConfigV2) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableMcpServerClientModelServerConfigV2(val *McpServerClientModelServerConfigV2) *NullableMcpServerClientModelServerConfigV2 {
+	return &NullableMcpServerClientModelServerConfigV2{value: val, isSet: true}
+}
+
+func (v NullableMcpServerClientModelServerConfigV2) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableMcpServerClientModelServerConfigV2) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
