# pkg/clientapi/model_mcp_server_transport_app_model.go
@@ -1,0 +1,110 @@
+/*
+Apono
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package clientapi
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+// McpServerTransportAppModel the model 'McpServerTransportAppModel'
+type McpServerTransportAppModel string
+
+// List of McpServerTransportAppModel
+const (
+	MCPSERVERTRANSPORTAPPMODEL_STDIO McpServerTransportAppModel = "STDIO"
+	MCPSERVERTRANSPORTAPPMODEL_HTTP  McpServerTransportAppModel = "HTTP"
+)
+
+// All allowed values of McpServerTransportAppModel enum
+var AllowedMcpServerTransportAppModelEnumValues = []McpServerTransportAppModel{
+	"STDIO",
+	"HTTP",
+}
+
+func (v *McpServerTransportAppModel) UnmarshalJSON(src []byte) error {
+	var value string
+	err := json.Unmarshal(src, &value)
+	if err != nil {
+		return err
+	}
+	enumTypeValue := McpServerTransportAppModel(value)
+	for _, existing := range AllowedMcpServerTransportAppModelEnumValues {
+		if existing == enumTypeValue {
+			*v = enumTypeValue
+			return nil
+		}
+	}
+
+	return fmt.Errorf("%+v is not a valid McpServerTransportAppModel", value)
+}
+
+// NewMcpServerTransportAppModelFromValue returns a pointer to a valid McpServerTransportAppModel
+// for the value passed as argument, or an error if the value passed is not allowed by the enum
+func NewMcpServerTransportAppModelFromValue(v string) (*McpServerTransportAppModel, error) {
+	ev := McpServerTransportAppModel(v)
+	if ev.IsValid() {
+		return &ev, nil
+	} else {
+		return nil, fmt.Errorf("invalid value '%v' for McpServerTransportAppModel: valid values are %v", v, AllowedMcpServerTransportAppModelEnumValues)
+	}
+}
+
+// IsValid return true if the value is valid for the enum, false otherwise
+func (v McpServerTransportAppModel) IsValid() bool {
+	for _, existing := range AllowedMcpServerTransportAppModelEnumValues {
+		if existing == v {
+			return true
+		}
+	}
+	return false
+}
+
+// Ptr returns reference to McpServerTransportAppModel value
+func (v McpServerTransportAppModel) Ptr() *McpServerTransportAppModel {
+	return &v
+}
+
+type NullableMcpServerTransportAppModel struct {
+	value *McpServerTransportAppModel
+	isSet bool
+}
+
+func (v NullableMcpServerTransportAppModel) Get() *McpServerTransportAppModel {
+	return v.value
+}
+
+func (v *NullableMcpServerTransportAppModel) Set(val *McpServerTransportAppModel) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableMcpServerTransportAppModel) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableMcpServerTransportAppModel) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableMcpServerTransportAppModel(val *McpServerTransportAppModel) *NullableMcpServerTransportAppModel {
+	return &NullableMcpServerTransportAppModel{value: val, isSet: true}
+}
+
+func (v NullableMcpServerTransportAppModel) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableMcpServerTransportAppModel) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
